// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TabContent > should match the snapshot for the first tab 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="tab-1"
    class="_tabContent_f91b3f"
    id="tabpanel_tab-1"
    role="tabpanel"
  >
    Tab 1 content
  </div>
</DocumentFragment>
`;

exports[`TabContent > should match the snapshot for the second tab 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="tab-2"
    class="_tabContent_f91b3f"
    id="tabpanel_tab-2"
    role="tabpanel"
  >
    Tab 2 content
  </div>
</DocumentFragment>
`;
